fixed header added, first section added with text which overflows the page to test the fixed header

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #CBD2D6FF;
+}
+
 .App {
   text-align: center;
 }
@@ -17,17 +21,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
